load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "apm.go",
        "elasticsearch.go",
        "http.go",
        "k8s.go",
        "security.go",
        "teststep.go",
        "testutils.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/test/e2e/helpers",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/apis/apm/v1alpha1:go_default_library",
        "//operators/pkg/apis/associations/v1alpha1:go_default_library",
        "//operators/pkg/apis/elasticsearch/v1alpha1:go_default_library",
        "//operators/pkg/apis/kibana/v1alpha1:go_default_library",
        "//operators/pkg/controller/apmserver:go_default_library",
        "//operators/pkg/controller/apmserver/config:go_default_library",
        "//operators/pkg/controller/common:go_default_library",
        "//operators/pkg/controller/common/certificates:go_default_library",
        "//operators/pkg/controller/common/version:go_default_library",
        "//operators/pkg/controller/elasticsearch/certificates/http:go_default_library",
        "//operators/pkg/controller/elasticsearch/client:go_default_library",
        "//operators/pkg/controller/elasticsearch/label:go_default_library",
        "//operators/pkg/controller/elasticsearch/name:go_default_library",
        "//operators/pkg/controller/kibana/label:go_default_library",
        "//operators/pkg/dev/portforward:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "//operators/pkg/utils/net:go_default_library",
        "//operators/pkg/utils/retry:go_default_library",
        "//operators/pkg/utils/stringsutil:go_default_library",
        "//operators/test/e2e/params:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_client_go//tools/remotecommand:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/config:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
    ],
)
