load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "builder.go",
        "checks.go",
        "checks_es.go",
        "checks_k8s.go",
        "checks_kb.go",
        "checks_volume.go",
        "cluster_uuid.go",
        "creation.go",
        "deletion.go",
        "init.go",
        "keystore.go",
        "license.go",
        "mutation.go",
        "run.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/test/e2e/stack",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/apis/common/v1alpha1:go_default_library",
        "//operators/pkg/apis/elasticsearch/v1alpha1:go_default_library",
        "//operators/pkg/apis/kibana/v1alpha1:go_default_library",
        "//operators/pkg/controller/common/certificates:go_default_library",
        "//operators/pkg/controller/common/license:go_default_library",
        "//operators/pkg/controller/elasticsearch/client:go_default_library",
        "//operators/pkg/controller/elasticsearch/keystore:go_default_library",
        "//operators/pkg/controller/elasticsearch/label:go_default_library",
        "//operators/pkg/controller/elasticsearch/name:go_default_library",
        "//operators/pkg/controller/elasticsearch/volume:go_default_library",
        "//operators/pkg/controller/kibana/name:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "//operators/pkg/utils/stringsutil:go_default_library",
        "//operators/test/e2e/helpers:go_default_library",
        "//operators/test/e2e/params:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
    ],
)
