load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "apmserver_types.go",
        "doc.go",
        "register.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/apis/apm/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/apis/common/v1alpha1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/scheme:go_default_library",
    ],
)
